# NeoVIM-GTK3

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: main.c
